--- a/ejercicio11/index.html
+++ b/ejercicio11/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div>
-        <input type="button" value="Pasa por encima" class="boton">
+        <button class="boton"></button>
     </div>
-    
-    
 </body>
 </html>
